#98: upgrades lombok and fixes breaking changes in prep for application dependency updates