@@ -30,6 +30,12 @@
     <sonar.jacoco.reportPaths>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
     <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <!--Sonar Pros: ends-->
+    <lombok.version>1.18.6</lombok.version>
+    <httpclient.version>4.5.4</httpclient.version>
+    <commons-cli.version>1.3.1</commons-cli.version>
+    <commons-io.version>1.3.2</commons-io.version>
+    <spring-boot-admin-starter-client.version>1.4.5</spring-boot-admin-starter-client.version>
+    <hamcrest-all.version>1.3</hamcrest-all.version>
   </properties>
 
   <dependencies>
@@ -79,13 +85,13 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.4</version>
+      <version>${httpclient.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.16.18</version>
-      <optional>true</optional>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.ehcache</groupId>
@@ -106,18 +112,18 @@
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.3.1</version>
+      <version>${commons-cli.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>${commons-io.version}</version>
     </dependency>
 
     <dependency>
       <groupId>de.codecentric</groupId>
       <artifactId>spring-boot-admin-starter-client</artifactId>
-      <version>1.4.5</version>
+      <version>${spring-boot-admin-starter-client.version}</version>
     </dependency>
 
     <!-- Test -->
@@ -129,7 +135,7 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
+      <version>${hamcrest-all.version}</version>
       <scope>test</scope>
     </dependency>
     <!--Runtime, for Embedded Elasticsearch Engine-->
@@ -163,6 +169,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!--Extra memory to prevent jvm crash during heavy Integration/unit test-->
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
           <classpathDependencyExcludes>
             <classpathDependencyExclude>org.springframework.cloud:spring-cloud-context</classpathDependencyExclude>
           </classpathDependencyExcludes>
